# MCP-WordAutoCpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  test.docx
extlib/cpp-mcp/: CMakeLists.txt  README.md
extlib/cpp-mcp/examples/: CMakeLists.txt  agent_example.cpp
extlib/cpp-mcp/src/: mcp_server.cpp
lang/zh-cn/: lang.json
src/: embedded_translations.h  i18n.cpp  i18n.h  main.cpp  main.h
